fix of top slide elements spacing

--- a/css/main.css
+++ b/css/main.css
@@ -73,18 +73,18 @@ body {
 }
 
 .subtitle {
-    margin-top: 2%;
+    margin-top: 1%;
 }
 .subtitle h2{
     letter-spacing: 7px;
 }
 
 .make-order-button {
-    margin-top: 5%;
+    margin-top: 3%;
 }
 
 .or {
-    margin-top: 35px;
+    margin-top: 1%;
 }
 
 .leave-feedback a{
